implement Interfaces for services